// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<button
  className="gdCKHU"
>
  Test
</button>
`;

exports[`Button renders disabled 1`] = `
<button
  className="kzKEne"
  disabled={true}
>
  Test
</button>
`;

exports[`Button renders href 1`] = `
<a
  className="gdCKHU"
  href="https://ivesvh.com"
>
  Test
</a>
`;

exports[`Button renders onClick 1`] = `
<button
  className="gdCKHU"
  onClick={[Function]}
>
  Test
</button>
`;

exports[`Button renders properties 1`] = `
<button
  className="hStGID"
>
  Test
</button>
`;

exports[`Button renders to 1`] = `
<a
  className="gdCKHU"
  href="https://ivesvh.com"
  onClick={[Function]}
>
  Test
</a>
`;
